src/component/HeaderTopBar/HeaderTopBar.style.scss
:root {
    --shadow-color: rgba(0,0,0,0.1);
}

.HeaderTopBar {
    height: 30px;
    box-shadow: 0 1px 0 0 var(--shadow-color);

    @media (max-width: 1024px) {
        width: 100%;
        position: fixed;
        bottom: 0;
        z-index: 4;
        background: black;
        height: 35px;
    }

    &-ContentWrapper {
        display: flex;
        max-width: 1440px;
        margin: 0 auto;
    }

    &-CmsBlock {
        font-size: 12px;
        font-weight: 600;
        letter-spacing: 0.5px;
        line-height: 16px;
        margin-top: 7px;
        margin-bottom: 7px;
        text-transform: uppercase;

        @media (max-width: 1024px) {
            display: none;
        }
    }
}

